# ssk-substrate-playground

./: .dockerignore  .env  .env.dev  .env.local  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: github.yml  integration-test.yml  publish-docker.yml  release.yml
configs/: pallet_asset_conversion.toml  pallet_asset_rate.toml  pallet_assets.toml  pallet_assets_freezer.toml  pallet_atomic_swap.toml  pallet_aura.toml  pallet_authorship.toml  pallet_balances.toml  pallet_base_fee.toml  pallet_bounties.toml  pallet_broker.toml  pallet_child_bounties.toml  pallet_collator_selection.toml  pallet_collective.toml  pallet_collective_general_instance.toml  pallet_collective_technical.toml  pallet_contracts.toml  pallet_contracts_parachain.toml  pallet_conviction_voting.toml  pallet_democracy.toml  pallet_ethereum.toml  pallet_evm.toml  pallet_grandpa.toml  pallet_identity.toml  pallet_indices.toml  pallet_lottery.toml  pallet_membership.toml  pallet_multisig.toml  pallet_nft_fractionalization.toml  pallet_nfts.toml  pallet_nis.toml  pallet_node_authorization.toml  pallet_paged_list.toml  pallet_parameters.toml  pallet_preimage.toml  pallet_proxy.toml  pallet_ranked_collective.toml  pallet_recovery.toml  pallet_referenda.toml  pallet_remark.toml  (+13 more)
docs/: deploy.md  github-push.md
generated_code/John/runtime/: Cargo.toml
generated_code/John/runtime/src/: lib.rs
generated_code/Pallet-test/runtime/: Cargo.toml
generated_code/Pallet-test/runtime/src/: lib.rs
init-scripts/: create-bucket.sh
src/: code_generator.rs  database.rs  db_models.rs  lib.rs  main.rs  pallet_index.rs  route.rs  types.rs
src/api/: mod.rs
src/api/handlers/: generate_project_handler.rs  get_dependencies_handler.rs  get_pallet_options_handler.rs  get_status_handler.rs  get_templates_handler.rs  get_use_cases.rs  list_supported_pallets_handler.rs  mod.rs
src/configs/: pallet_assets.rs  pallet_aura.rs  pallet_bags_list.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_collective.rs  pallet_democracy.rs  pallet_election_provider_multi_phase.rs  pallet_grandpa.rs  pallet_identity.rs  pallet_membership.rs  pallet_multisig.rs  pallet_nfts.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_society.rs  pallet_staking.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_transaction_payment.rs  pallet_treasury.rs  pallet_uniques.rs  pallet_utility.rs  pallet_vesting.rs
src/middleware/: metrics.rs
src/pallets/: Cargo.toml
src/pallets/src/: code_generator.rs  lib.rs  main.rs  types.rs  util.rs  utils.rs
src/pallets/src/configs/: pallet_aura.rs  pallet_balances.rs  pallet_grandpa.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_transaction_payment.rs  pallet_utility.rs
src/pallets/src/utils/: file_manager.rs  manifest.rs  runtime.rs
src/services/: async_zip.rs  git.rs  mod.rs  object_store.rs  s3.rs  version_control.rs
src/services/archiver/: async_zip.rs  mod.rs
src/services/code_generator/: load_configs.rs  load_templates.rs  mod.rs  service.rs  types.rs
src/services/code_generator/templating/: mod.rs
src/services/code_generator/templating/handle_templates/: manifest.rs  mod.rs  runtime_lib.rs
src/services/code_generator/utils/: load_configs.rs  mod.rs
src/services/object_store/: mod.rs  s3.rs
src/services/template_archiver/: async_zip.rs  mod.rs
src/services/traits/: archiver.rs  mod.rs  version_control.rs
src/toml_configs/: pallet_assets.toml  pallet_aura.toml  pallet_balances.toml  pallet_bounties.toml  pallet_child_bounties.toml  pallet_collective.toml  pallet_democracy.toml  pallet_grandpa.toml  pallet_identity.toml  pallet_membership.toml  pallet_multisig.toml  pallet_nfts.toml  pallet_proxy.toml  pallet_scheduler.toml  pallet_society.toml  pallet_sudo.toml  pallet_timestamp.toml  pallet_transaction_payment.toml  pallet_treasury.toml  pallet_uniques.toml  pallet_utility.toml  pallet_vesting.toml
src/utils/: file_manager.rs  manifest.rs  mod.rs  runtime.rs  runtime_lib.rs  util.rs
templates/Frontier/: Cargo.toml  Dockerfile  README.md  zombienet.toml
templates/Frontier/node/: Cargo.toml
templates/Frontier/node/src/: benchmarking.rs
templates/Frontier/runtime/: Cargo.toml.hbs
templates/Frontier/runtime/src/: lib.rs.hbs
templates/Minimal/: Cargo.toml
templates/Minimal/runtime/: Cargo.toml.hbs
templates/Minimal/runtime/src/: lib.rs.hbs
templates/ParaChain/runtime/: Cargo.toml.hbs
templates/ParaChain/runtime/src/: lib.rs.hbs
templates/ParaChain/runtime/src/configs/: mod.rs
templates/SoloChain/runtime/: Cargo.toml.hbs
templates/SoloChain/runtime/src/: lib.rs  lib.rs.hbs
templates/SoloFrontierChain/: Cargo.toml  README.md
templates/SoloFrontierChain/node/src/: command.rs
templates/SoloFrontierChain/runtime/: Cargo.toml.hbs
templates/SoloFrontierChain/runtime/src/: lib.rs.hbs
templates/minimal/: Cargo.toml
templates/minimal/node/: Cargo.toml
templates/minimal/pallets/template/: Cargo.toml
templates/minimal/runtime/: Cargo.toml
templates/minimal/runtime/src/: lib.rs
templates/parachain/basic/runtime/: Cargo.toml
templates/parachain/basic/runtime/src/: lib.rs
templates/parachain/basic/runtime/src/configs/: mod.rs
templates/solochain/basic/: README.md
templates/solochain/basic/runtime/: Cargo.toml  Cargo.toml.hbs
templates/solochain/basic/runtime/src/: lib.rs  lib.rs.hbs
templates/solochain/frontier/: Cargo.toml
templates/solochain/frontier/node/src/: chain_spec.rs  client.rs  service.rs
templates/solochain/frontier/node/src/rpc/: mod.rs
templates/solochain/frontier/runtime/: Cargo.toml
templates/solochain/frontier/runtime/src/: lib.rs
tests/: test_api.rs  test_s3.rs
