[package]
name = "substrate-runtime-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tokio = "1.0"
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.0"
time = "0.3"
regex = "1.10.6"
# For handling JSON requests and responses
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For spawning blocking tasks (web::block)
actix-rt = "2.8"

# Optional: if using error handling, you might want this crate
thiserror = "1.0"

actix-files = "0.6"

zip = "0.6"  # Add this line

mongodb = "2.7.0"

strum = "0.26"
strum_macros = "0.26"
toml = "0.8.19"
convert_case = "0.6.0"
