[package]
name = "substrate-runtime-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.31"
thiserror = "2.0.3"
strum = "0.26"
strum_macros = "0.26"
toml = "0.8.19"
convert_case = "0.6.0"
handlebars = "6.2.0"
poem = "3.1.3"
poem-openapi = { version = "5.1.2", features = ["swagger-ui", "uuid", "url"] }
tracing-subscriber = "0.3.18"
dyn-fmt = "0.4.3"
scc = "2.2.5"
url = "2.5.4"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.62.0"
aws-smithy-http = "0.60.11"
async_zip = { version = "0.0.17", features = ["full"] }
async-trait = "0.1.83"
aws-types = "1.3.3"
httpdate = "1.0.3"
dotenv = "0.15.0"
ctor = "0.2.9"

[dev-dependencies]
reqwest = "0.12.9"
serial_test = "3.2.0"
