[workspace.package]
license = "MIT-0"
authors = ["MVP Workshop <hello@mvpworkshop.co>"]
homepage = ""
repository = ""
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]

resolver = "2"

[workspace.dependencies]


# Frontier Client
fc-api = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }
fc-cli = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fc-consensus = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }
fc-db = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fc-mapping-sync = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fc-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fc-rpc-core = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }
fc-rpc-v2 = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }
fc-rpc-v2-api = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }
fc-rpc-v2-types = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }
fc-storage = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }


# Frontier Primitive
fp-account = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fp-consensus = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fp-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fp-ethereum = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fp-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fp-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fp-self-contained = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
fp-storage = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }


# Frontier FRAME
pallet-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407" }
pallet-hotfix-sufficients = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }

# Frontier Utility
precompile-utils = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2407", default-features = false }
# Frontier Template
frontier-parachain-node = { path = "./runtime", default-features = false }